--- a/profiles_api/templates/index.html
+++ b/profiles_api/templates/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
     <h1> Test </h1>
+    <form method="POST" action="{% url 'test' %}">
+        {% csrf_token %}
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
